--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="apple-touch-icon" href="/cc180x180.png"><!-- 180×180 -->
 	<link rel="manifest" href="/manifest.json">
 	
-	<script src="cc.js" defer></script>
+	<script src="cc.js" type = "module" defer></script>
 	<script>
 		navigator.serviceWorker ? navigator.serviceWorker.register('../sw.js') : "";
 		window.history.replaceState({}, "", `lang`);
